# ion

./: .gitignore  CMakeLists.txt  Technical.md  license.md  specs.md  todo.md
src/: ion.hh  main.cpp
src/implementations/: lexer.cpp  parser.cpp  utils.cpp
src/includes/: ast.hh  constructs.hh  ion.hh  lexer.hh  parser.hh  processes.hh  utils.hh
src/mains/: aot.cpp
src/scripts/: install.zsh
